rust/test/dt/type_constructor/single/single_self_containing_test.stderr
error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0109]: type arguments are not allowed on type parameter `Bad`
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:6:3
   |
6  | /   types!
7  | |   {
8  | |
9  | |     // struct Bad( Box< Bad > ); compiles without errors
10 | |     single Bad : Box< Bad >;
   | |            --- not allowed on type parameter `Bad`
11 | |
12 | |   }
   | |___^ type argument not allowed
   |
note: type parameter `Bad` defined here
  --> ../../../rust/test/dt/type_constructor/single/single_self_containing_test.rs:10:23
   |
10 |     single Bad : Box< Bad >;
   |                       ^^^
   = note: this error originates in the macro `$crate::_single` which comes from the expansion of the macro `types` (in Nightly builds, run with -Z macro-backtrace for more info)
